--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "simple-navigation-next",
   "version": "1.0.0",
   "main": "index.js",
-  "repository": "https://github.com/tsmDevProjects/alura-case.git",
+  "repository": "https://github.com/tsmDevProjects/simple-navigation-next",
   "author": "tsmsp <tsm_sp@hotmail.com>",
   "license": "MIT",
   "dependencies": {
