--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "author": "tsmsp <tsm_sp@hotmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "next": "^13.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -15,6 +18,7 @@
     "build": "next build",
     "export": "next build && next export",
     "start": "next start",
+    "complete": "yarn build && yarn start",
     "lint": "next lint"
   },
   "devDependencies": {
